--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     
     <!-- Header Sito-->
     <header>
-
+        <div class="head"> 
+            <img src="./img/Logo.png" alt="">
+            <span>Toboolist</span>
+        </div>
+        
     </header>
 
     <!-- Main Sito -->
