main site commit

--- a/index.html
+++ b/index.html
@@ -20,7 +20,40 @@
 
     <!-- Main Sito -->
     <main>
+        <div class="contenitore">
 
+            <!-- navigazione -->
+            <div class="navigazione">
+                <span class="nav task">Add Task</span>
+                <span class="nav section">Add Section</span>
+            </div>
+            
+            <div class="informazioni">
+
+                <!-- New Task -->
+                <h2> &#X25BE; New Task</h2>
+                <div class="line">
+                    Quarterly Newsletter
+                </div>
+                <!-- Today -->
+                <h2> &#X25BE; Today</h2>
+                <div class="line">
+                    Recruiting blog post
+                </div>
+                <div class="line">
+                    Mobile app launch
+                </div>
+                <div class="line">
+                    Interview Jophn l,
+                </div>
+                <div class="line">
+                    Summit update to Mobile store
+                </div>
+
+                <!-- Upcoming -->
+            </div>
+            
+        </div>
     </main>
 
 </body>
