--- a/index.html
+++ b/index.html
@@ -32,25 +32,41 @@
 
                 <!-- New Task -->
                 <h2> &#X25BE; New Task</h2>
-                <div class="line">
-                    Quarterly Newsletter
-                </div>
+                
+                <div class="checkgreen line editorial"> Quarterly Newsletter</div>
+
                 <!-- Today -->
                 <h2> &#X25BE; Today</h2>
-                <div class="line">
+                <div class="checkgreen line editorial">
                     Recruiting blog post
                 </div>
-                <div class="line">
+                <div class="checkgreen line q1goals">
                     Mobile app launch
                 </div>
-                <div class="line">
+                <div class="checkred line recruiting">
                     Interview Jophn l,
                 </div>
-                <div class="line">
+                <div class="checkgreen line mobile">
                     Summit update to Mobile store
                 </div>
 
                 <!-- Upcoming -->
+                <h2> &#X25BE; Upcoming</h2>
+
+                <div class="checkred line">
+                    Schedule meeting with Alex
+                </div>
+                <div class="checkgreen line website">
+                    Homepage refresh
+                </div>
+                <div class="checkgreen line sales">
+                    ONboard new Sales team members
+                </div>
+                <div class="checkgreen line editorial">
+                    review editorial calendar
+                </div>
+
+
             </div>
             
         </div>
